--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY="INSERT-API-KEY-HERE"OPENAI_API_KEY="INSERT-API-KEY-HERE"
+OPENAI_API_KEY="INSERT-API-KEY-HERE"
 NOTION_INTEGRATION_KEY=""
 PAGE_ID=""
 DATABASE_ID=""
